fix beta tag alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -55,52 +55,19 @@
   }
 }
 
-// Beta banner
-.app-beta {
-  background: $color_nhsuk-white;
-  border: 1px solid $color_nhsuk-grey-5;
-  padding: nhsuk-spacing(2) 0;
-}
-
-.app-beta__container {
-  @include mq($until: desktop) {
-    position: relative;
-  }
-}
-
-.app-beta__content {
-  display: table;
-  margin-bottom: 0;
-}
-
-.app-beta__tag {
-  margin-right: nhsuk-spacing(2);
-}
-
-.app-beta__text {
-  @include nhsuk-font($size: 16, $line-height: 1.2);
-  display: table-cell;
-  vertical-align: baseline;
-}
-
 // Lede text
 h1 + .nhsuk-lede-text {
   margin-top: - nhsuk-spacing(3);
 }
 
-.nhsuk-lede-text {
-  @include mq($until: desktop) {
-    margin-bottom: nhsuk-spacing(5);
-  }
-}
-
+// Lede sub text
 .nhsuk-lede-text + .app-lede-text--sub {
   margin-bottom: nhsuk-spacing(7);
   margin-top: - nhsuk-spacing(3);
 
   @include mq($until: desktop) {
-    margin-bottom: nhsuk-spacing(5);
-    margin-top: - nhsuk-spacing(2);
+    margin-bottom: nhsuk-spacing(6);
+    margin-top: - nhsuk-spacing(3);
   }
 }
 
